fix video overflow

--- a/public/index.css
+++ b/public/index.css
@@ -14,6 +14,16 @@ a-scene {
     right:0;
     bottom:0
 }
+
+video {
+    position: fixed !important;
+    width: 100vw !important;
+    height: 100vh !important;
+    left:0;
+    top:0;
+    right:0;
+    bottom:0
+}
 #app{
     z-index: 1;
 }
